overflow=auto fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,3 +18,6 @@
   border: 3px solid #73AD21;
 
 }
+p {
+  overflow: auto;
+}
